--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             content.className = "content hide";
             other.className = "other";
             other.innerHTML = "<h1>" + href + "</h1><p><a href='/d/'>Paste and Draw</a> - fast edit an image on a mac: mostly AI created</p>"
-                                            +      "<p><a href='/s/'>AI created</a> - Goal App.</p>";
+                                            +      "<p><a href='/q/'>AI created</a> - Goal App.</p>";
           }else if (href =='About') {
             content.className = "content hide";
             other.className = "other";
