--- a/e2/index.html
+++ b/e2/index.html
@@ -25,7 +25,7 @@
       <button id="btnRestore">50</button>
     </span>
   </div>
-  <iframe id="preview" style="position:absolute; top:30px; bottom:0; left:0; right:0; border:0;"></iframe>
+  <iframe id="preview" style="position:absolute;top:30px;border:0;width:100%;height:100%"></iframe>
 </div>
 <div id="lowerBox">
   <div class="lowerMenu">
