--- a/e2/index.html
+++ b/e2/index.html
@@ -17,33 +17,17 @@
 <body>
 <div id="topBox">
   <div class="topMenu">
-    <button id="btnL">LOAD</button>
-    <button id="btnS">SAVE</button>
-    <button id="btnE">EXPORT</button>
-    <button id="btnI">IMPORT</button>
-    <span id="restoreSpan" style="float:right; display:none;">
-      <button id="btnRestore">50</button>
-    </span>
+    <button id="btnL">LOAD</button><button id="btnS">SAVE</button><button id="btnE">EXPORT</button><button id="btnI">IMPORT</button>
+    <span id="restoreSpan" style="float:right;display:none;"><button id="btnRestore">50</button></span>
   </div>
   <iframe id="preview" style="position:absolute;top:30px;border:0;width:100%;height:100%"></iframe>
 </div>
 <div id="lowerBox">
   <div class="lowerMenu">
-    <button id="btnHTML" class="active">HTML</button>
-    <button id="btnJS">JS</button>
-    <button id="btnCSS">CSS</button>
-    <button id="btn100">100</button>
-    <button id="btn90">90</button>
-    <button id="btn80">80</button>
-    <button id="btn70">70</button>
-    <button id="btn50" class="active">50</button>
-    <button id="btn30">30</button>
-    <button id="btn00">00</button>
+    <button id="btnHTML" class="active">HTML</button> <button id="btnJS">JS</button> <button id="btnCSS">CSS</button><button id="btn100">100</button><button id="btn90">90</button><button id="btn80">80</button><button id="btn70">70</button><button id="btn50" class="active">50</button><button id="btn30">30</button><button id="btn00">00</button>
   </div>
   <div class="editors" style="position:absolute; top:30px; bottom:0; left:0; right:0;">
-    <textarea id="iHTML"></textarea>
-    <textarea id="iJS" style="display:none;"></textarea>
-    <textarea id="iCSS" style="display:none;"></textarea>
+    <textarea id="iHTML"></textarea><textarea id="iJS" style="display:none;"></textarea><textarea id="iCSS" style="display:none;"></textarea>
   </div>
 </div>
 <script>
