--- a/e2/index.html
+++ b/e2/index.html
@@ -30,7 +30,7 @@
     <textarea id="iHTML"></textarea><textarea id="iJS" style="display:none;"></textarea><textarea id="iCSS" style="display:none;"></textarea>
     <div id="consoleDiv" style="display:none; position:absolute; top:0; bottom:0; left:0; right:0; padding:5px; box-sizing:border-box;">
       <textarea id="oConsole" style="width:100%;height:80%;resize:none;" readonly></textarea>
-      <div style="display:flex; margin-top:5px;"><input id="consoleInput" type="text" style="flex:1;" /><button id="btnRun">RUN</button></div>
+      <div style="display:flex; margin-top:5px;"><input id="iConsole" type="text" style="flex:1;" /><button id="btnRun">RUN</button></div>
     </div>
   </div>
 </div>
@@ -57,34 +57,36 @@ btnConsole.onclick = function(){
   iHTML.style.display = iJS.style.display = iCSS.style.display = "none";
   consoleDiv.style.display = "block";btnHTML.classList.remove("active");btnJS.classList.remove("active");btnCSS.classList.remove("active");btnConsole.classList.add("active");
 };
-btnRun.onclick = function(){
-  var cmd = consoleInput.value; oConsole.value += "> " + cmd + "\n";
-  try { var result = eval(cmd); if(result !== undefined) oConsole.value += result + "\n"; } catch(e) { oConsole.value += "Error: " + e.message + "\n"; }
-  oConsole.scrollTop = oConsole.scrollHeight; consoleInput.value = "";
-};
+function runCommand(){
+  var cmd=iConsole.value;oConsole.value+="> "+cmd+"\n";
+  try {/*Execute in iframe context */var result=preview.contentWindow.eval(cmd);if(result!==undefined)oConsole.value+=result+"\n";}catch(e){oConsole.value+="Error: "+e.message+"\n";}
+  oConsole.scrollTop=oConsole.scrollHeight;iConsole.value="";
+}
+btnRun.onclick = runCommand;
+iConsole.onkeydown = function(e){if(e.key==="Enter"){e.preventDefault();runCommand();}}
 
-var iframeConsole = preview.contentWindow.console;
-var oldILog = iframeConsole.log, oldIError = iframeConsole.error, oldIWarn = iframeConsole.warn;
-iframeConsole.log = function(){
-  oldILog.apply(iframeConsole, arguments);
-  oConsole.value += Array.from(arguments).join(" ") + "\n";
-};
-iframeConsole.error = function(){
-  oldIError.apply(iframeConsole, arguments);
-  oConsole.value += "Error: " + Array.from(arguments).join(" ") + "\n";
-};
-iframeConsole.warn = function(){
-  oldIWarn.apply(iframeConsole, arguments);
-  oConsole.value += "Warning: " + Array.from(arguments).join(" ") + "\n";
-};
+  
 preview.onload = function(){
+  var iConsole = preview.contentWindow.console;
+  var oldLog = iConsole.log, oldError = iConsole.error, oldWarn = iConsole.warn;
+  iConsole.log = function(){
+    oldLog.apply(iConsole, arguments);
+    oConsole.value += Array.from(arguments).join(" ") + "\n";
+  };
+  iConsole.error = function(){
+    oldError.apply(iConsole, arguments);
+    oConsole.value += "Error: " + Array.from(arguments).join(" ") + "\n";
+  };
+  iConsole.warn = function(){
+    oldWarn.apply(iConsole, arguments);
+    oConsole.value += "Warning: " + Array.from(arguments).join(" ") + "\n";
+  };
   preview.contentWindow.onerror = function(message, source, lineno, colno, error) {
     oConsole.value += "Iframe Error: " + message + " (" + source + ":" + lineno + ")\n";
     oConsole.scrollTop = oConsole.scrollHeight;
     return false;
   };
 };
-
   
   
 btnHTML.onclick = function(){
