--- a/e2/index.html
+++ b/e2/index.html
@@ -12,6 +12,7 @@
   .topMenu button, .lowerMenu button {margin-right:5px; border:none; background:none; cursor:pointer; font-size:14px;}
   .active {color:#aaf;}
   .editors textarea {width:100%; height:100%; box-sizing:border-box; font-family:monospace; font-size:14px; resize:none; padding:5px; border:0;}
+  @media (max-width: 768px) { button { font-size: 18px; } }
 </style>
 </head>
 <body>
@@ -238,6 +239,7 @@ function showLoadPop(savedProjects) {
         projectNameElem.textContent = projectName;
         projectNameElem.style.cursor = 'pointer';
         projectNameElem.style.fontWeight = 'bold';
+        projectNameElem.style.marginRight = '5px';
         projectNameElem.onclick = () => loadProject(savedProjects, projectName, 0);  // Load the most recent version (index 0)
         projectContainer.appendChild(projectNameElem);
 
@@ -246,7 +248,7 @@ function showLoadPop(savedProjects) {
             for (let i = 1; i < versions.length; i++) {
                 const versionButton = document.createElement('button');
                 versionButton.textContent = `[${i + 1}]`;  // Display version number starting from 2
-                versionButton.style.marginLeft = '0px';
+                versionButton.style.marginLeft = '5px';
                 versionButton.style.cursor = 'pointer';
                 versionButton.onclick = () => loadProject(savedProjects, projectName, i);  // Load specific version
                 projectContainer.appendChild(versionButton);
