--- a/e2/index.html
+++ b/e2/index.html
@@ -12,7 +12,7 @@
   .topMenu button, .lowerMenu button {margin-right:5px; border:none; background:none; cursor:pointer; font-size:14px;}
   .active {color:#aaf;}
   .editors textarea {width:100%; height:100%; box-sizing:border-box; font-family:monospace; font-size:14px; resize:none; padding:5px; border:0;}
-  @media (pointer: coarse) { button { font-size: 28px !important; } }
+  @media (pointer: coarse) { button, #popL span, #popL button { font-size: 28px !important; } }
 </style>
 </head>
 <body>
