--- a/e2/index.html
+++ b/e2/index.html
@@ -32,7 +32,10 @@
     <textarea id="iHTML"></textarea><textarea id="iJS" style="display:none;"></textarea><textarea id="iCSS" style="display:none;"></textarea>
     <div id="consoleDiv" style="display:none; position:absolute; top:0; bottom:0; left:0; right:0; padding:5px; box-sizing:border-box;">
         <div id="oConsole" style="width:100%; height:80%; background:#000; color:#fff; padding:5px; overflow-y:scroll; font-family:monospace;"></div>
-      <div style="display:flex; margin-top:5px;"><input id="iConsole" type="text" style="flex:1;" /><button id="btnRun">RUN</button><button id="btnClear">CLEAR</button></div>
+      <div style="display:flex; margin-top:5px;">
+        <div id="commandHistory" style="max-height:150px;overflow-y:auto;background:rgba(0,0,0,0.05);border:1px solid #ccc;margin-bottom:5px;padding:5px;"></div>
+        <input id="iConsole" type="text" style="flex:1;" /><button id="btnRun">RUN</button><button id="btnClear">CLEAR</button>
+      </div>
     </div>
   </div>
 </div>
@@ -53,6 +56,16 @@ function dbgCde(){
         console.log('Debugging Console Setup Complete...');
     `;
 }
+
+let commandHistory = []; let historyIndex = -1; const maxHistory = 15;
+// Load command history from localStorage on page load
+dcmp().then(decompressed => {
+    const pLst = JSON.parse(decompressed || '{}');
+    if (pLst['SYS_CONSOLE'] && pLst['SYS_CONSOLE'][0]) {
+        commandHistory = pLst['SYS_CONSOLE'][0].js || [];
+        renderCommandHistory();  // Render history on page load
+    }
+});
 
 function appendToConsole(type, message) {
     const msgElement = document.createElement('div'); msgElement.textContent = `[${type.toUpperCase()}]: ${message}`;
@@ -82,11 +95,67 @@ btnConsole.onclick = function(){
 function runCommand(){
   var cmd=iConsole.value;appendToConsole('sys', "> "+cmd);/*Execute below in iframe context */
   try {var result=preview.contentWindow.eval(cmd);if(result!==undefined)appendToConsole('sys', result);}catch(e){appendToConsole('sys', "Error: "+e.message);}
+  saveCommandToHistory(cmd); renderCommandHistory(); // Save command to history
   iConsole.value="";
 }
 btnRun.onclick = runCommand;
 btnClear.onclick = function() { oConsole.innerHTML = '';if (cErrInd) { cErrInd.remove(); } };
 iConsole.onkeydown = function(e){if(e.key==="Enter"){e.preventDefault();runCommand();}}
+
+function saveCommandToHistory(cmd) {
+    if (commandHistory[0] !== cmd) {  // Avoid duplicate consecutive commands
+        commandHistory.unshift(cmd);
+        if (commandHistory.length > maxHistory) commandHistory.pop();
+        // Save to PLst and localStorage
+        const pName = 'SYS_CONSOLE';
+        const projData = { js: [...commandHistory], css: '', html: '', timestamp: Date.now() };
+
+        if (!pLst[pName]) pLst[pName] = [];
+        pLst[pName].unshift(projData);
+        if (pLst[pName].length > 100) pLst[pName].pop();
+      
+        cmp(JSON.stringify(pLst));  // Compress and save to localStorage
+    }
+}
+
+// Navigate command history with up arrow
+iConsole.addEventListener('keydown', (e) => {
+    if (e.key === 'ArrowUp') {
+        e.preventDefault();
+        if (historyIndex < commandHistory.length - 1) {
+            historyIndex++;
+            iConsole.value = commandHistory[historyIndex];
+        }
+    } else if (e.key === 'ArrowDown') {
+        e.preventDefault();
+        if (historyIndex > 0) {
+            historyIndex--;
+            iConsole.value = commandHistory[historyIndex];
+        } else {
+            historyIndex = -1;
+            iConsole.value = '';  // Clear input when navigating past the latest command
+        }
+    }
+});
+
+// Render command history list for mobile (above iConsole)
+function renderCommandHistory() {
+    const historyContainer = document.getElementById('commandHistory');
+    historyContainer.innerHTML = '';  // Clear previous history
+    commandHistory.slice(0, maxHistory).forEach((cmd, index) => {
+        const cmdElem = document.createElement('div');
+        cmdElem.textContent = cmd;
+        cmdElem.style.fontSize = '20px';
+        cmdElem.style.opacity = '0.7';
+        cmdElem.style.cursor = 'pointer';
+        cmdElem.style.padding = '2px 5px';
+        cmdElem.style.borderBottom = '1px solid #ddd';
+        
+        // Load command into iConsole when clicked
+        cmdElem.onclick = () => { iConsole.value = cmd; iConsole.focus(); };
+        historyContainer.appendChild(cmdElem);
+    });
+}
 
 btnHTML.onclick = function(){
   activeTab = "HTML";
