--- a/e/index.html
+++ b/e/index.html
@@ -5,6 +5,7 @@
   section{float:left;width:5%;transition:width 0.5s ease;height:100vh;}
   section:focus-within, .lf{width:90%;}section:not(:focus-within):not(.lf){width:5%;}
   .meditor{height:calc(100% - 50px);}
+  :root { touch-action:pan-x pan-y;height: 100% }
  </style>
  <script src="https://cdn.jsdelivr.net/npm/eruda"></script><script>eruda.init();eruda.position({ x: -20, y: -20 })</script>
  <script src="https://cdnjs.cloudflare.com/ajax/libs/monaco-editor/0.33.0/min/vs/loader.min.js"></script>
