--- a/index.html
+++ b/index.html
@@ -288,17 +288,37 @@
         {
           name: "Mobile HTML / JS editor V2",
           link: "/m2/",
-          description: "New version of the mobile HTML/JS editor"
+          description: "v2 mobile HTML/JS editor"
         },
         {
           name: "Desktop HTML / JS editor V2",
           link: "/e2/",
-          description: "New version of the desktop HTML/JS editor"
+          description: "v2 desktop HTML/JS editor"
         },
         {
           name: "Snake Game",
           link: "/gms/s/",
           description: "AI created Snake Game"
+        },
+        {
+          name: "Throwit",
+          link: "/gms/t/",
+          description: "Throw game"
+        },
+        {
+          name: "phr2",
+          link: "/gms/s/",
+          description: "phr2"
+        },
+        {
+          name: "phr3",
+          link: "/gms/s/",
+          description: "phr3"
+        },
+        {
+          name: "phr4",
+          link: "/gms/s/",
+          description: "phr4"
         }
       ],
       experiments: [
