--- a/index.html
+++ b/index.html
@@ -306,9 +306,9 @@
           description: "Throw game"
         },
         {
-          name: "phr2",
-          link: "/gms/s/",
-          description: "phr2"
+          name: "CCG Template",
+          link: "/gms/c/",
+          description: "a CCG template. "
         },
         {
           name: "phr3",
