--- a/index.html
+++ b/index.html
@@ -311,9 +311,9 @@
           description: "a CCG template. "
         },
         {
-          name: "phr3",
-          link: "/gms/s/",
-          description: "phr3"
+          name: "Asteroids",
+          link: "/gms/a/",
+          description: "Asteroids!!!"
         },
         {
           name: "phr4",
